--- a/ZTEST/pom.xml
+++ b/ZTEST/pom.xml
@@ -88,12 +88,6 @@
 		<!-- <dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-hive_2.10</artifactId> 
 			<version>1.6.0-cdh5.7.0</version> </dependency> -->
 
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-csv</artifactId>
-			<version>1.2</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.databricks/spark-csv_2.10 -->
 		<!-- <dependency> <groupId>com.databricks</groupId> <artifactId>spark-csv_2.10</artifactId> 
 			<version>1.5.0</version> </dependency> -->
@@ -103,12 +97,6 @@
 			<version>4.12</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer -->
-		<dependency>
-			<groupId>com.janeluo</groupId>
-			<artifactId>ikanalyzer</artifactId>
-			<version>2012_u6</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
@@ -139,6 +127,12 @@
 			<version>2.4.14</version>
 		</dependency>
 
+
+<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-remote_2.11</artifactId>
+			<version>2.4.14</version>
+		</dependency>
 
 	</dependencies>
 
