--- a/scheduler.ui/pom.xml
+++ b/scheduler.ui/pom.xml
@@ -57,8 +57,11 @@
 			<artifactId>spring-beans</artifactId>
 			<version>4.3.12.RELEASE</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>silen</groupId>
+			<artifactId>scheduler.core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -70,13 +73,13 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
+
 					<!-- 注意此处的url,修改成tomcat监听的端口即可 -->
 					<url>http://localhost:8080/manager/text</url>
 					<server>tomcat7</server> <!-- 此处的名字必须和setting.xml中配置的ID一致 -->
 					<path>/${project.artifactId}</path> <!-- 此处的名字是项目发布的工程名 -->
-					<server>tomcat7</server>
-					<!-- <username>admin</username> -->
-					<!-- <password>password</password> -->
+					<username>admin</username>
+					<password>admin</password>
 				</configuration>
 			</plugin>
 		</plugins>
