--- a/scheduler.ui/pom.xml
+++ b/scheduler.ui/pom.xml
@@ -35,6 +35,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.12.RELEASE</version>
 			<scope>compile</scope>
+
 		</dependency>
 
 
@@ -61,6 +62,20 @@
 			<groupId>silen</groupId>
 			<artifactId>scheduler.core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jackson-core</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jackson-databind</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>netty-all</artifactId>
+					<groupId>io.netty</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 
@@ -69,7 +84,7 @@
 		<dependency>
 			<groupId>com.corundumstudio.socketio</groupId>
 			<artifactId>netty-socketio</artifactId>
-			<version>1.7.7</version>
+			 <version>1.7.14-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
