--- a/scheduler.ui/pom.xml
+++ b/scheduler.ui/pom.xml
@@ -58,34 +58,36 @@
 			<artifactId>spring-beans</artifactId>
 			<version>4.3.12.RELEASE</version>
 		</dependency>
+
+
+
 		<dependency>
-			<groupId>silen</groupId>
-			<artifactId>scheduler.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jackson-core</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jackson-databind</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>netty-all</artifactId>
-					<groupId>io.netty</groupId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.11</artifactId>
+			<version>2.4.14</version>
 		</dependency>
 
 
-
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-remote_2.11</artifactId>
+			<version>2.4.14</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.corundumstudio.socketio</groupId>
 			<artifactId>netty-socketio</artifactId>
-			 <version>1.7.14-SNAPSHOT</version>
+			<version>1.7.14-SNAPSHOT</version>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
