--- a/scheduler.ui/pom.xml
+++ b/scheduler.ui/pom.xml
@@ -8,6 +8,11 @@
 	<name>scheduler.ui Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+   <properties> 
+   
+   <jackson.version>2.8.10</jackson.version>
+    </properties> 
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -88,6 +93,28 @@
 			<version>2.6.2</version>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 
 	</dependencies>
 	<build>
