--- a/Scheduler-core/pom.xml
+++ b/Scheduler-core/pom.xml
@@ -16,6 +16,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
 		<jedis.version>2.7.2</jedis.version>
+		<jackson.version>2.8.10</jackson.version>
 	</properties>
 
 
@@ -87,6 +88,12 @@
 		</dependency>
 
 
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 
 	</dependencies>
 
