--- a/scheduler.ui/.classpath
+++ b/scheduler.ui/.classpath
@@ -29,12 +29,12 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrator/.m2/repository/javax/annotation/javax.annotation-api/1.2/javax.annotation-api-1.2.jar" sourcepath="C:/Users/Administrator/.m2/repository/javax/annotation/javax.annotation-api/1.2/javax.annotation-api-1.2-sources.jar">
+	<classpathentry kind="lib" path="C:/Users/Administrator/.m2/repository/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar" sourcepath="C:/Users/Administrator/.m2/repository/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01-sources.jar">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="javax.annotation"/>
-			<attribute name="maven.artifactId" value="javax.annotation-api"/>
-			<attribute name="maven.version" value="1.2"/>
+			<attribute name="maven.groupId" value="xml-apis"/>
+			<attribute name="maven.artifactId" value="xml-apis"/>
+			<attribute name="maven.version" value="1.4.01"/>
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
