xml parser for oozie

--- a/Scheduler-core/.classpath
+++ b/Scheduler-core/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/classes" path="src/test/java">
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -27,15 +27,6 @@
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Administrator/.m2/repository/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/scala-lang/scala-library/2.11.8/scala-library-2.11.8-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="org.scala-lang"/>
-			<attribute name="maven.artifactId" value="scala-library"/>
-			<attribute name="maven.version" value="2.11.8"/>
-			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
