--- a/silen-ml/pom.xml
+++ b/silen-ml/pom.xml
@@ -8,10 +8,10 @@
 	<name>scheduler.ui Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-   <properties> 
-   
-   <jackson.version>2.8.10</jackson.version>
-    </properties> 
+	<properties>
+
+		<jackson.version>2.8.10</jackson.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -38,11 +38,18 @@
 			<version>2.4.14</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.corundumstudio.socketio</groupId> -->
-<!-- 			<artifactId>netty-socketio</artifactId> -->
-<!-- 			<version>1.7.14-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
+
+		<dependency>
+			<groupId>org.scalanlp</groupId>
+			<artifactId>breeze_2.11</artifactId>
+			<version>0.13.2</version>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.corundumstudio.socketio</groupId> -->
+		<!-- <artifactId>netty-socketio</artifactId> -->
+		<!-- <version>1.7.14-SNAPSHOT</version> -->
+		<!-- </dependency> -->
 
 
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
@@ -54,11 +61,11 @@
 
 
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.fasterxml.jackson.core</groupId> -->
-<!-- 			<artifactId>jackson-databind</artifactId> -->
-<!-- 			<version>${jackson.version}</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+		<!-- <artifactId>jackson-databind</artifactId> -->
+		<!-- <version>${jackson.version}</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
