--- a/silen-ml/pom.xml
+++ b/silen-ml/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>silen</groupId>
 	<artifactId>scheduler.ui</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>scheduler.ui Maven Webapp</name>
 	<url>http://maven.apache.org</url>
