add unit test case

--- a/silen-ml/pom.xml
+++ b/silen-ml/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>silen</groupId>
-	<artifactId>scheduler.ui</artifactId>
+	<artifactId>ml</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>scheduler.ui Maven Webapp</name>
@@ -45,7 +45,16 @@
 			<version>0.13.2</version>
 		</dependency>
 
-		<!-- <dependency> -->
+
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <version>3.0.5</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <!-- <dependency> -->
 		<!-- <groupId>com.corundumstudio.socketio</groupId> -->
 		<!-- <artifactId>netty-socketio</artifactId> -->
 		<!-- <version>1.7.14-SNAPSHOT</version> -->
